--- a/vue-admin-template-master/package.json
+++ b/vue-admin-template-master/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "echarts": "^5.4.0",
-    "element-ui": "2.4.6",
+    "element-ui": "^2.15.10",
     "js-cookie": "2.2.0",
     "node-sass": "^7.0.1",
     "normalize.css": "7.0.0",
@@ -24,7 +24,8 @@
     "sass-loader": "^7.0.1",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "8.5.0",
